--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+
+# Pydantic & Settings
 pydantic==2.5.0
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
+
+# LLM & Networking
 anthropic==0.7.1
 httpx==0.25.1
 requests==2.31.0
+
+# Utilities
 python-multipart==0.0.6
 aiofiles==23.2.1
-streamlit==1.28.1
 loguru==0.7.2
