--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,40 @@
-version: '3.8'
-
 services:
   api:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: llm-engine-api
+    container_name: judicial-verification-api
+    environment:
+      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+      - LLM_MODEL=claude-3-5-sonnet-20241022
+      - LLM_TEMPERATURE=0.3
+      - LOG_LEVEL=INFO
+      - DEBUG=false
     ports:
       - "8000:8000"
-    environment:
-      - PYTHONUNBUFFERED=1
-      - CLAUDE_API_KEY=${CLAUDE_API_KEY}
-      - ENV=production
     volumes:
-      - ./src:/src/src
-    command: python -m uvicorn src.entrypoints.main_api:app --host 0.0.0.0 --port 8000 --reload
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/v1/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 5s
+      - ./src:/app/src
+    command: uvicorn src.entrypoints.main_api:app --host 0.0.0.0 --port 8000 --reload
     networks:
-      - juscash-network
-    restart: unless-stopped
+      - judicial-network
+
+  ui:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: judicial-verification-ui
+    environment:
+      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+    ports:
+      - "8501:8501"
+    volumes:
+      - ./src:/app/src
+    command: streamlit run src/entrypoints/main_ui.py --server.port 8501 --server.address 0.0.0.0
+    depends_on:
+      - api
+    networks:
+      - judicial-network
 
 networks:
-  juscash-network:
+  judicial-network:
     driver: bridge
