--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,17 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-
-# Pydantic & Settings
-pydantic==2.5.0
-pydantic-settings==2.1.0
-python-dotenv==1.0.0
-
-# LLM & AI
-anthropic==0.7.1
-langsmith==0.0.83
-
-# Web & HTTP
-httpx==0.25.1
-requests==2.31.0
-
-# Frontend
-streamlit==1.28.1
-
-# Utilities
-python-multipart==0.0.6
-aiofiles==23.2.1
-python-json-logger==2.0.7
-
-# Testing (optional)
-pytest==7.4.3
-pytest-asyncio==0.21.1
-httpx==0.25.1
+fastapi
+uvicorn[standard]
+pydantic
+pydantic-settings
+anthropic
+python-dotenv
+streamlit
+requests
+langchain
+langchain-openai
+langchain-google-genai
+langchain-anthropic
+langsmith
+python-multipart
+pytest
+pytest-asyncio
+httpx
