--- a/.env.example
+++ b/.env.example
@@ -1,170 +1,31 @@
-# ═════════════════════════════════════════════════════════════════
-# LLM CONFIGURATION (Claude API)
-# ═════════════════════════════════════════════════════════════════
+# FastAPI Configuration
+ENVIRONMENT=development
+DEBUG=True
+API_TITLE="JusCash Process Verifier"
+API_VERSION=1.0.0
+HOST=0.0.0.0
+PORT=8000
+RELOAD=True
 
-# Your Anthropic API Key
-# Get it at: https://console.anthropic.com/account/keys
-CLAUDE_API_KEY=sk-ant-v4-YOUR-KEY-HERE
+# OPENAI API
+OPENAI_API_KEY=sk-ant-xxxxxxxxxxxxxxxxxxxxx
+OPENAI_MODEL=gpt-3.5-turbo
+MAX_TOKENS=2000
 
-# Claude Model to use
-# Options: claude-3-sonnet-20241022, claude-3-opus-20240229, etc.
-LLM_MODEL=claude-3-sonnet-20241022
+# LangSmith (Opcional)
+ENABLE_LANGSMITH=False
+LANGSMITH_API_KEY=
+LANGSMITH_PROJECT_NAME=juscash-verifier
 
-# LLM Request Timeout (seconds)
-LLM_TIMEOUT=30
-
-# LLM Max Tokens per response
-LLM_MAX_TOKENS=2048
-
-# ═════════════════════════════════════════════════════════════════
-# API CONFIGURATION
-# ═════════════════════════════════════════════════════════════════
-
-# API Server
-API_HOST=0.0.0.0
-API_PORT=8000
-
-# Environment (development, testing, production)
-ENV=development
-
-# API Base URL (for external access)
-# Used for webhooks, documentation, etc.
-API_BASE_URL=http://localhost:8000
-
-# ═════════════════════════════════════════════════════════════════
-# STREAMLIT UI CONFIGURATION
-# ═════════════════════════════════════════════════════════════════
-
-# Streamlit Server
-STREAMLIT_PORT=8501
-STREAMLIT_SERVER_HEADLESS=true
-
-# API URL that Streamlit will use to connect
-# Inside Docker: http://api:8000
-# Locally: http://localhost:8000
-API_URL=http://api:8000
-
-# ═════════════════════════════════════════════════════════════════
-# LOGGING CONFIGURATION
-# ═════════════════════════════════════════════════════════════════
-
-# Log Level: DEBUG, INFO, WARNING, ERROR, CRITICAL
+# Logging
 LOG_LEVEL=INFO
-
-# Log Format: json or text
 LOG_FORMAT=json
 
-# Log File Path (optional)
-LOG_FILE=logs/app.log
+# Database
+DATABASE_URL=sqlite:///./juscash.db
 
-# ═════════════════════════════════════════════════════════════════
-# SECURITY CONFIGURATION
-# ═════════════════════════════════════════════════════════════════
+# Limits    
+MAX_BATCH_SIZE=50
+MAX_REQUEST_TIMEOUT=30
 
-# Secret Key for JWT tokens (generate a random string)
-# You can generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
-SECRET_KEY=your-secret-key-here-change-in-production
-
-# CORS Origins (comma-separated for multiple)
-# Allowed domains that can access your API
-CORS_ORIGINS=http://localhost:3000,http://localhost:8501
-
-# Rate Limiting
-# Requests per minute
-RATE_LIMIT_RPM=100
-
-# ═════════════════════════════════════════════════════════════════
-# DATABASE CONFIGURATION (if using in future)
-# ═════════════════════════════════════════════════════════════════
-
-# SQLite (default, no setup needed)
-# DATABASE_URL=sqlite:///./test.db
-
-# PostgreSQL (uncomment and configure if needed)
-# DATABASE_URL=postgresql://user:password@localhost/llm_engine
-
-# ═════════════════════════════════════════════════════════════════
-# EXTERNAL SERVICES
-# ═════════════════════════════════════════════════════════════════
-
-# LangSmith (optional - for LLM monitoring)
-# https://smith.langchain.com
-LANGSMITH_API_KEY=optional-if-not-using
-LANGSMITH_PROJECT=llm-engine
-LANGSMITH_ENABLED=false
-
-# ═════════════════════════════════════════════════════════════════
-# POLICIES & BUSINESS LOGIC
-# ═════════════════════════════════════════════════════════════════
-
-# Policy Version (helps with versioning)
-POLICY_VERSION=1.0.0
-
-# Policy File Path (if storing policies externally)
-# POLICY_FILE=config/policies.json
-
-# ═════════════════════════════════════════════════════════════════
-# PROCESSING CONFIGURATION
-# ═════════════════════════════════════════════════════════════════
-
-# Max Request Size (MB)
-MAX_REQUEST_SIZE=10
-
-# Request Processing Timeout (seconds)
-PROCESSING_TIMEOUT=60
-
-# Number of Worker Threads
-WORKER_THREADS=4
-
-# ═════════════════════════════════════════════════════════════════
-# NOTIFICATIONS (if implementing webhooks)
-# ═════════════════════════════════════════════════════════════════
-
-# Webhook Timeout (seconds)
-WEBHOOK_TIMEOUT=10
-
-# Webhook Retry Attempts
-WEBHOOK_MAX_RETRIES=3
-
-# ═════════════════════════════════════════════════════════════════
-# TESTING CONFIGURATION
-# ═════════════════════════════════════════════════════════════════
-
-# Enable Test Mode (for development)
-TEST_MODE=false
-
-# Mock LLM Responses (useful for testing without API calls)
-MOCK_LLM=false
-
-# ═════════════════════════════════════════════════════════════════
-# MONITORING & OBSERVABILITY
-# ═════════════════════════════════════════════════════════════════
-
-# Enable Metrics Collection
-METRICS_ENABLED=true
-
-# Metrics Port (Prometheus format)
-METRICS_PORT=9090
-
-# Enable Health Check Endpoint
-HEALTH_CHECK_ENABLED=true
-
-# ═════════════════════════════════════════════════════════════════
-# DEPLOYMENT
-# ═════════════════════════════════════════════════════════════════
-
-# For Railway.app
-# RAILWAY_ENVIRONMENT_ID=your-id-here
-
-# For Render.com
-# RENDER_SERVICE_ID=your-id-here
-
-# ═════════════════════════════════════════════════════════════════
-# NOTES
-# ═════════════════════════════════════════════════════════════════
-
-# 1. Never commit .env to git (add to .gitignore)
-# 2. Use strong SECRET_KEY in production
-# 3. Update API_URL when deploying
-# 4. Keep CLAUDE_API_KEY secret and secure
-# 5. Test in development before changing production values
+MIN_VALOR_CONDENACAO=1000.00
