--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,9 @@ HOST=0.0.0.0
 PORT=8000
 RELOAD=True
 
-# OPENAI API
-OPENAI_API_KEY=sk-proj-xxxxxxxxxxxxxxxxxxxxx
-OPENAI_MODEL=gpt-3.5-turbo
+# GROQ API
+GROQ_API_KEY=sk-proj-xxxxxxxxxxxxxxxxxxxxx
+GROQ_MODEL=llama-3.1-8b-instant
 MAX_TOKENS=2000
 
 # LangSmith (Opcional)
